--- a/src/index.css
+++ b/src/index.css
@@ -843,6 +843,9 @@ i{
 .product-style{
   text-decoration: none;
 }
+.product-style{
+  color: gray;
+}
 
 .product-details h6{
   font-size: 24px;
@@ -1487,6 +1490,8 @@ button {
   margin-top: 50px;
   display: grid;
   grid-template-columns: 20% 40% 40%;
+  padding: 0 100px;
+  font-family: "Poppins", sans-serif;
 }
 
 .productsinfo .productsinfo-1 img{
@@ -1495,7 +1500,7 @@ button {
 }
 
 .productsinfo .productsinfo-1{
-  padding: 0 150px 100px 20px;
+  padding: 0 125px 100px 20px;
   /* margin-top: -50px; */
 }
 
@@ -1511,29 +1516,85 @@ button {
   display: grid;
   grid-template-columns: repeat(2,1fr);
 }
-
-.productsinfo-3 {
- margin: 5px 50px 5px 5px;
+.productsinfo-3{
+  margin-left: 50px;
 }
 
+.productsinfo-3 h6{
+  font-weight: 700;
+  color: #a9afc3;
+}
+.product-image-iteration{
+  cursor: pointer;
+}
+.productsinfo-3 .pro-info{
+  color: #a9afc3;
+}
+.productsinfo-3 .rating-reviews-no{
+  color: gray;
+}
+.productsinfo-3 .price-related-content h6{
+  font-size: 36px;
+  color: #babfcf;
+}
+.price-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price-content button{
+  margin-left: 100px;
+}
+.productsinfo-3 .price-related-content h6 del{
+  font-size: 24px;
+  color: gray;
+  margin-left: 20px;
+}
+.discount-calculated{
+  color: green;
+}
+
+.productsinfo hr{
+  margin-top: 30px;
+}
+
+.productsinfo-3 .product-offers-discount{
+  color: #a9afc3;
+  margin-top: 40px;
+  margin-bottom: 15px;
+}
+.price-related-content .product-taxes{
+  color: gray;
+  font-size: 14px;
+}
 .productsinfo-3 div section button{
  background-color: green;
  border: none;
  color: white;
  font-size: 18px;
- padding: 5px;
+ padding: 5px 15px;
+ border-radius: 4px;
 }
 
 .border{
   border: 1px solid silver;
-  padding: 5px;
+  padding: 10px;
+  border-radius: 5px;
   margin-right: 20px;
+  background-color: #1f1f1f;
+  color: #a9afc3;
+}
+
+.creditcard-emi .border{
+  font-size: 15px;
 }
 
 #cart{
   background-color: red;
   border: none;
-  padding: 5px;
+  padding: 10px;
+  font-size: 16px;
+  margin-top: 20px;
   width: 50%;
   height: auto;
   color: white;
@@ -1593,19 +1654,100 @@ button {
 /* Search Results */
 .search-results{
   position: absolute;
-  top: 90px;
-  left: 385px;
+  top: 95px;
+  left: 455px;
+  width: 600px;
+  background-color: #292929;
+  padding:10px;
+}
+.search-results li{
+  margin-left: 2px;
+  list-style: none;
+}
+.search-results li:hover{
+  background-color: #474747;
 }
 .product-title-search{
   text-decoration: none;
-  list-style: none;
   color: rgb(181, 179, 179);
-  padding-bottom: -10px;
+  padding-left: inherit;
   /* border: 1px solid ; */
 }
 
 .product-title-search hr{
   margin-top: -100px;
+  width: 100%;
 }
 
 /* Search Results */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Overview */
+.specification-data{
+  width: 30%;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 100px;
+}
+.specification-data div{
+  display: flex;
+  justify-content: space-between;
+  line-height: 50px;
+  color: #a9afc3 ;
+}
+
+.dynamic-specification-data{
+  font-size: 18px;
+  font-weight: 600;
+}
+.product-overview-details{
+  padding: 30px 120px;
+  font-family: "Poppins", sans-serif;
+}
+
+
+
+
+
+
+.review-person-data{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.user-image{
+  background: white;
+  padding: 10px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.review-data{
+  display: grid;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  font-family: "Poppins", sans-serif;
+}
+.each-review{
+  margin-bottom: 30px;
+}
+/* Overview */
