--- a/src/index.css
+++ b/src/index.css
@@ -1768,6 +1768,7 @@ button {
   width: 30%;
   font-family: "Poppins", sans-serif;
   margin-bottom: 100px;
+  margin-left: 120px;
 }
 
 .specification-data div {
@@ -1781,6 +1782,29 @@ button {
   font-size: 18px;
   font-weight: 600;
 }
+.overview-title{
+  color: red;
+}
+.product-overview-details p{
+  font-weight: 600;
+  color: #a9afc3;
+}
+.product-overview-details li{
+  color: gray;
+  font-size: 14px;
+  line-height: 30px;
+}
+.product-overview-details aside{
+  color: gray;
+  font-size: 16px;
+  line-height: 30px;
+  margin-top: 20px;
+}
+.product-overview-details aside span{
+  color: #a9afc3;
+  font-weight: 700;
+}
+
 
 .product-overview-details {
   padding: 30px 120px;
@@ -1794,7 +1818,7 @@ button {
 
 .review-person-data {
   display: flex;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
   align-items: center;
   margin-bottom: 10px;
 }
@@ -1806,9 +1830,21 @@ button {
   margin-right: 10px;
 }
 
+.review-username p:first-child{
+  font-weight: 600;
+  color: #a9afc3;
+}
+.review-username span{
+  font-size: 15px;
+  color: gray;
+}
+.each-review p{
+  color: #a9afc3;
+  font-size: 16px;
+}
 .review-data {
   display: grid;
-  justify-content: center;
+  margin-left: 120px;
   margin-bottom: 50px;
   margin-top: 50px;
   font-family: "Poppins", sans-serif;
