--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ body {
   font-weight: 700;
   font-style: normal;
   color: #a9afc3;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background-color: #141414;
 }
 
 .logo {
@@ -1855,3 +1860,237 @@ button {
 }
 
 /* Overview */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Cart */
+.cart-2-sum {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 100px 0 0;
+}
+
+.cartempty {
+  font-family: "Poppins", sans-serif;
+  color: #a9afc3;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.cartempty svg{
+  width: 500px;
+  height: 200px;
+  color: red;
+}
+.cartempty button{
+  background-color: red;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+.cart-code {
+  /* display: grid;
+  grid-template-columns: repeat(1, 1fr); Change to a single column */
+  display: flex;
+  flex-wrap: wrap;
+  color: white;
+  padding: 10px;
+  position: relative;
+  margin: 0 100px;
+  font-family: "Poppins", sans-serif;
+  margin-top: 50px;
+}
+
+.product-list{
+  flex: 1;
+  margin-bottom: 10px;
+}
+.cart-summary {
+  width: 250px; /* Adjust width as needed */
+  margin-left: 100px;
+}
+.cart-summary hr{
+  width: 80%;
+}
+
+.cart-1 {
+  display: grid;
+  grid-template-columns: 45% 45% 10%;
+  padding: 20px;
+  background-color: #1a1919;
+}
+.cart-1 img {
+  max-width: 200px;
+  padding: 20px;
+}
+
+.counter {
+  display: flex;
+  align-items: center;
+  border: 1px solid silver;
+  width: 165px;
+  margin-top: 20px;
+}
+.counter span:first-child{
+  padding: 5px 20px;
+  cursor: pointer;
+}
+.counter span:last-child{
+  padding: 5px 20px;
+  cursor: pointer;
+}
+.counter span:nth-child(2){
+  padding: 5px 25px;
+  background-color: #1f1f1f;
+  color: red;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.counter button {
+  border: 1px solid silver;
+  padding: 0 5px 0 5px;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: black;
+  color: white;
+  filter: brightness(60%);
+}
+.delete {
+  position: static;
+  cursor: pointer;
+  background-color: #1a1919;
+  color: white;
+  border: none;
+}
+.delete:hover{
+  color: rgb(209, 209, 209);
+}
+
+.cart-2{
+  width: 500px;
+}
+.product-info-cart{
+  margin: 20px 0 20px -50px;
+}
+.product-info-cart h3{
+  color: #a9afc3;
+}
+.product-info-cart button{
+  font-weight: 600;
+  font-size: 25px;
+  color: #a9afc3;
+  border: none;
+}
+.product-info-cart p del{
+  margin-left: 30px;
+  font-size: 18px;
+  color: gray;
+}
+
+.cart{
+  text-decoration: none;
+  position: relative;
+}
+
+.cart sup{
+  position: absolute;
+  top: -15px;
+  height: 18px;
+  left: px;
+  background-color: red;
+  border: 1px solid red;
+  border-radius: 50%;
+  padding: 0 4px;
+  font-weight: 400;
+  color: white;
+}
+
+.cart-summary h3{
+  color: #a9afc3;
+  font-weight: 600;
+}
+
+.cart-summary section p{
+  color: gray;
+  font-size: 16px;
+  line-height: 40px;
+}
+.cart-summary section:last-child p{
+  font-weight: 700;
+  text-align: right;
+}
+.cart-summary section:last-child p:first-child{
+  color: #a9afc3;
+}
+.price-tag-cart{
+  font-size: 24px !important;
+  color: white !important;
+  margin-bottom: 30px !important;
+}
+
+.checkout{
+  width: 80%;
+  background-color: red;
+  font-size: 16px;
+}
+/* Cart */
+@media screen and (max-width : 800px) and (min-width : 700px) {
+  .product-info-cart{
+    margin-left: 10px;
+  }
+}
+@media screen and (max-width : 700px) and (min-width : 600px) {
+  .product-info-cart{
+    margin-left: 10px;
+  }
+  .cart-code{
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+}
+@media screen and (max-width : 600px) and (min-width : 550px) {
+  .product-info-cart{
+    margin-left: 10px;
+  }
+  .cart-code{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width : 550px) and (min-width : 400px) {
+  .product-info-cart{
+    margin-left: 10px;
+  }
+  .cart-code{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .cart-summary{
+    width: 200px;
+  }
+  .cart-card-item{
+    width: 20px;
+  }
+}
